Deleted something.html and fixed align with announements

--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,6 @@ section:nth-child(even) {
 
 #announcements {
     padding: 40px 15%;
-    text-align: left;
 }
 
 #announcements h2 {
